update logic search import,export