@@ -1,14 +1,14 @@
 package com.example.warehousesystem.service;
 
+import com.example.warehousesystem.dto.request.ImportOrderSearch2Request;
 import com.example.warehousesystem.dto.request.ImportOrderSearchRequest;
 import com.example.warehousesystem.dto.response.ImportOrderBoardResponse;
-import com.example.warehousesystem.entity.ImportOrderDetail;
+import com.example.warehousesystem.mapper.ImportOrderBoardMapper;
 import com.example.warehousesystem.repository.ImportOrderDetailRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -16,22 +16,26 @@ public class ImportOrderSearchService {
 
     private final ImportOrderDetailRepository importOrderDetailRepository;
 
-
     public List<ImportOrderBoardResponse> searchImportOrders(ImportOrderSearchRequest request) {
-        List<ImportOrderDetail> details = importOrderDetailRepository.searchImportOrdersV2(
-                request.getImportCode(),
-                request.getSkuCode(),
-                request.getCreatedAt()
-        );
-
-
-        return details.stream()
-                .map(d -> ImportOrderBoardResponse.builder()
-                        .importCode(d.getImportOrder().getImportCode())
-                        .skuCode(d.getSku().getSkuCode())
-                        .skuName(d.getSku().getName())
-                        .createdAt(d.getImportOrder().getCreatedAt().atStartOfDay()) // giữ nguyên LocalDateTime
-                        .build())
-                .collect(Collectors.toList());
+        return importOrderDetailRepository.searchImportOrdersV2(
+                        request.getImportCode(),
+                        request.getSkuCode(),
+                        request.getStartDate(),
+                        request.getEndDate()
+                ).stream()
+                .map(ImportOrderBoardMapper::toResponse)
+                .toList();
     }
+
+    public List<ImportOrderBoardResponse> searchImportOrdersMerged(ImportOrderSearch2Request request) {
+        return ImportOrderBoardMapper.toBoardResponses(
+                importOrderDetailRepository.searchImportOrdersMerged(
+                        request.getImportCode(),
+                        request.getSource(),
+                        request.getStartDate(),
+                        request.getEndDate()
+                )
+        );
+    }
+
 }
